--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>1.1.0.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-fileupload</groupId>
