--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,21 @@
 		<jackson.version>2.5.2</jackson.version>
 
 		<junit.version>4.12</junit.version>
+		
 	</properties>
 
 	<dependencies>
-	
+
 		<dependency>
-		    <groupId>javax.validation</groupId>
-		    <artifactId>validation-api</artifactId>
-		    <version>1.1.0.Final</version>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>5.1.2.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
 		</dependency>
 
 		<dependency>
