--- a/back/pom.xml
+++ b/back/pom.xml
@@ -2,9 +2,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.zenika</groupId>
+	<parent>
+	    <groupId>com.zenika.monitoring</groupId>
+	    <artifactId>all</artifactId>
+	    <version>1.0.0-SNAPSHOT</version>
+	    <relativePath>../pom.xml</relativePath>
+  	</parent>
+
 	<artifactId>back</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<packaging>war</packaging>
 
