--- a/back/pom.xml
+++ b/back/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-	    <groupId>com.zenika.monitoring</groupId>
-	    <artifactId>all</artifactId>
-	    <version>1.0.0-SNAPSHOT</version>
-	    <relativePath>../pom.xml</relativePath>
-  	</parent>
+		<groupId>com.zenika.monitoring</groupId>
+		<artifactId>all</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 
 	<artifactId>back</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
@@ -31,6 +31,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<artifactId>jmxtrans-gui</artifactId>
+			<groupId>com.zenika.monitoring</groupId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
