--- a/back/src/main/webapp/WEB-INF/web.xml
+++ b/back/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,6 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>back</servlet-name>
-		<url-pattern>/service/*</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 </web-app>
