--- a/jmxtrans-gui/pom.xml
+++ b/jmxtrans-gui/pom.xml
@@ -1,36 +1,61 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-	    <groupId>com.zenika.monitoring</groupId>
-	    <artifactId>all</artifactId>
-	    <version>1.0.0-SNAPSHOT</version>
-	    <relativePath>../pom.xml</relativePath>
-  	</parent>
+  <parent>
+    <groupId>com.zenika.monitoring</groupId>
+    <artifactId>all</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
 
-	<artifactId>jmxtrans-gui</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+  <artifactId>jmxtrans-gui</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
 
-	<build>
-	    <plugins>
-	      <plugin>
-	        <groupId>org.codehaus.mojo</groupId>
-	        <artifactId>exec-maven-plugin</artifactId>
-	        <version>1.2.1</version>
-	        <executions>
-	          <execution>
-	            <phase>prepare-package</phase>
-	            <goals>
-	              <goal>exec</goal>
-	            </goals>
-	          </execution>
-	        </executions>
-	        <configuration>
-	          <executable>${project.basedir}/src/main/scripts/build.sh</executable>
-	        </configuration>
-	      </plugin>
-	    </plugins>
-	  </build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <executions>
+          <execution>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <executable>${project.basedir}/src/main/scripts/build.${script.extension}</executable>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+  <profiles>
+    <profile>
+      <id>for-windows</id>
+      <activation>
+        <os>
+          <family>Windows</family>
+        </os>
+      </activation>
+      <properties>
+        <script.extension>bat</script.extension>
+      </properties>
+    </profile>
+    <profile>
+      <id>for-nix</id>
+      <activation>
+        <os>
+          <family>Linux</family>
+        </os>
+      </activation>
+      <properties>
+        <script.extension>sh</script.extension>
+      </properties>
+    </profile>
+  </profiles>
 
 </project>
