--- a/jmxtrans-gui/bower.json
+++ b/jmxtrans-gui/bower.json
@@ -9,8 +9,9 @@
     "jquery": "~2.1.1",
     "angular-route": "~1.3.4",
     "bootstrap-sass-official": "~3.3.1",
-    "angular-bootstrap": "~0.12.0",
-    "angular": "~1.3.4"
+    "angular-bootstrap": "~0.12.1",
+    "angular": "~1.3.4",
+    "angular-file-upload": "~1.1.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
