--- a/back/pom.xml
+++ b/back/pom.xml
@@ -32,6 +32,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
 			<artifactId>jmxtrans-gui</artifactId>
 			<groupId>com.zenika.monitoring</groupId>
 			<version>${project.version}</version>
