--- a/jmxtrans-gui/bower.json
+++ b/jmxtrans-gui/bower.json
@@ -11,7 +11,8 @@
     "bootstrap-sass-official": "~3.3.1",
     "angular-bootstrap": "~0.12.1",
     "angular": "~1.3.4",
-    "angular-file-upload": "~1.1.5"
+    "angular-file-upload": "~1.1.5",
+    "ngtoast": "~1.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
