--- a/jmxtrans-gui/bower.json
+++ b/jmxtrans-gui/bower.json
@@ -12,7 +12,8 @@
     "angular-bootstrap": "~0.12.1",
     "angular": "~1.3.4",
     "angular-file-upload": "~1.1.5",
-    "ngtoast": "~1.5.0"
+    "ngtoast": "~1.5.0",
+    "angular-sweetalert": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
