--- a/back/pom.xml
+++ b/back/pom.xml
@@ -28,6 +28,7 @@
 		<hibernate-validator.version>5.1.2.Final</hibernate-validator.version>
 		<javax-validation.version>1.1.0.Final</javax-validation.version>
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
+		<assertj.version>2.0.0</assertj.version>
 	</properties>
 
 	<dependencies>
@@ -95,6 +96,17 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring-framework.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj.version}</version>
 		</dependency>
 	</dependencies>
 
