--- a/back/src/main/webapp/WEB-INF/web.xml
+++ b/back/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,11 @@
 						http://java.sun.com/xml/ns/javaee/web-app http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0" id="back">
 
+    <context-param>
+        <param-name>spring.profiles.active</param-name>
+        <param-value>prod</param-value>
+    </context-param>
+
     <servlet>
         <servlet-name>back</servlet-name>
         <servlet-class>
