--- a/jmxtrans-gui/bower.json
+++ b/jmxtrans-gui/bower.json
@@ -8,12 +8,13 @@
     "angular-sanitize": "~1.3.4",
     "jquery": "~2.1.1",
     "angular-route": "~1.3.4",
-    "bootstrap-sass-official": "~3.3.1",
+    "bootstrap-sass-official": "~3.3.4",
     "angular-bootstrap": "~0.12.1",
     "angular": "~1.3.4",
     "angular-file-upload": "~1.1.5",
     "ngtoast": "~1.5.0",
-    "angular-sweetalert": "~1.1.0"
+    "angular-sweetalert": "~1.1.0",
+    "font-awesome": "~4.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
