--- a/jmxtrans-gui/bower.json
+++ b/jmxtrans-gui/bower.json
@@ -14,7 +14,8 @@
     "angular-file-upload": "~1.1.5",
     "ngtoast": "~1.5.0",
     "angular-sweetalert": "~1.1.0",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "bootswatch-scss": "~3.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
