--- a/back/pom.xml
+++ b/back/pom.xml
@@ -10,7 +10,6 @@
 	</parent>
 
 	<artifactId>back</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
 
 	<packaging>war</packaging>
 
@@ -29,6 +28,7 @@
 		<javax-validation.version>1.1.0.Final</javax-validation.version>
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 		<assertj.version>2.0.0</assertj.version>
+		<mockito.version>1.10.19</mockito.version>
 	</properties>
 
 	<dependencies>
@@ -108,6 +108,12 @@
 			<artifactId>assertj-core</artifactId>
 			<version>${assertj.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>${mockito.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
