--- a/jmxtrans-gui/pom.xml
+++ b/jmxtrans-gui/pom.xml
@@ -26,7 +26,7 @@
           </execution>
         </executions>
         <configuration>
-          <executable>${project.basedir}/src/main/scripts/build.${script.extension}</executable>
+          <executable>${project.basedir}/scripts/build.${script.extension}</executable>
         </configuration>
       </plugin>
     </plugins>
