--- a/jmxtrans-gui/bower.json
+++ b/jmxtrans-gui/bower.json
@@ -22,6 +22,7 @@
   },
   "resolutions": {
     "jquery": "~2.1.1",
-    "angular": "~1.3.4"
+    "angular": "~1.3.4",
+    "bootstrap-sass-official": "~3.3.4"
   }
 }
