--- a/jmxtrans-gui/package.json
+++ b/jmxtrans-gui/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0-SNAPSHOT",
   "dependencies": {
     "bower": "^1.4.1",
-    "gulp": "^3.8.11"
+    "gulp": "^3.8.11",
+    "node-sass": "^2.1.1"
   },
   "scripts": {
     "test": "gulp test"
