--- a/jmxtrans-gui/package.json
+++ b/jmxtrans-gui/package.json
@@ -1,15 +1,11 @@
 {
   "name": "jmxtransGui",
   "version": "1.0.0-SNAPSHOT",
-  "dependencies": {
-    "bower": "^1.4.1",
-    "gulp": "^3.8.11",
-    "node-sass": "^2.1.1"
-  },
   "scripts": {
     "test": "gulp test"
   },
   "devDependencies": {
+    "bower": "~1.4.1",
     "gulp": "~3.8.11",
     "gulp-autoprefixer": "~2.1.0",
     "gulp-angular-templatecache": "~1.5.0",
