--- a/back/pom.xml
+++ b/back/pom.xml
@@ -29,18 +29,20 @@
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 		<assertj.version>2.0.0</assertj.version>
 		<mockito.version>1.10.19</mockito.version>
+		<servlet-api.version>2.5</servlet-api.version>
+		<jmxtrans-gui.version>${project.version}</jmxtrans-gui.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<version>${servlet-api.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>jmxtrans-gui</artifactId>
-			<groupId>com.zenika.monitoring</groupId>
-			<version>${project.version}</version>
+			<version>${jmxtrans-gui.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -178,6 +180,15 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.2</version>
+				<configuration>
+					<goals>deploy</goals>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
