--- a/back/pom.xml
+++ b/back/pom.xml
@@ -30,7 +30,7 @@
 		<assertj.version>2.0.0</assertj.version>
 		<mockito.version>1.10.19</mockito.version>
 		<servlet-api.version>2.5</servlet-api.version>
-		<jmxtrans-gui.version>${project.version}</jmxtrans-gui.version>
+		<jmxtrans-gui.version>1.0.0-SNAPSHOT</jmxtrans-gui.version>
 	</properties>
 
 	<dependencies>
