--- a/back/pom.xml
+++ b/back/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>com.zenika.monitoring</groupId>
 		<artifactId>all</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -29,7 +30,7 @@
 		<assertj.version>2.0.0</assertj.version>
 		<mockito.version>1.10.19</mockito.version>
 		<servlet-api.version>2.5</servlet-api.version>
-		<jmxtrans-gui.version>1.0.1-SNAPSHOT</jmxtrans-gui.version>
+		<jmxtrans-gui.version>1.0.0-SNAPSHOT</jmxtrans-gui.version>
 	</properties>
 
 	<dependencies>
