--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zenika.monitoring</groupId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <artifactId>all</artifactId>
     <packaging>pom</packaging>
 
     <scm>
         <developerConnection>scm:git:https://github.com/btravers/Back</developerConnection>
-      <tag>v1.0.0</tag>
   </scm>
 
     <modules>
