--- a/back/pom.xml
+++ b/back/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.zenika.monitoring</groupId>
 		<artifactId>all</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -29,7 +29,7 @@
 		<assertj.version>2.0.0</assertj.version>
 		<mockito.version>1.10.19</mockito.version>
 		<servlet-api.version>2.5</servlet-api.version>
-		<jmxtrans-gui.version>1.0.0</jmxtrans-gui.version>
+		<jmxtrans-gui.version>1.0.0-SNAPSHOT</jmxtrans-gui.version>
 	</properties>
 
 	<dependencies>
