--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.2</version>
                 <configuration>
-                    <goals>deploy</goals>
+                    <goals>install</goals>
                     <tagNameFormat>v@{project.version}</tagNameFormat>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
