Change url pattern

--- a/back/src/main/webapp/WEB-INF/web.xml
+++ b/back/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>back</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <filter>
