--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -31,9 +31,21 @@
         <mockito.version>1.10.19</mockito.version>
         <servlet-api.version>2.5</servlet-api.version>
         <frontend.version>1.0.1-SNAPSHOT</frontend.version>
+        <httpclient.version>4.4</httpclient.version>
+        <commons-pool.version>1.6</commons-pool.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+            <version>${commons-pool.version}</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
